--- a/Visualize.ipynb
+++ b/Visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f9948051-aa72-472b-95e8-028ce09167ca",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import sqlite3\n",
     "import panel as pn\n",
     "from datetime import datetime, date\n",
-    "import param"
+    "import param\n",
+    "from bokeh.models.widgets.tables import DateFormatter, StringFormatter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "6b2d0869-b32b-4a2c-8ac6-5d996770c498",
    "metadata": {},
    "outputs": [],
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f68a1467-d544-4962-aba7-7021e6137c61",
    "metadata": {},
    "outputs": [],
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "14c8ba49-1fd7-4034-90b7-0853f20cd3c6",
    "metadata": {},
    "outputs": [],
@@ -98,47 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e6ea4360-24a6-47fa-ab28-3c6fcb345298",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drop down options\n",
-    "names = list(df['name'].unique())\n",
-    "securities = list(df['security'].unique())\n",
-    "tickers = list(df['ticker'].unique())\n",
-    "buysell = ['Buy', 'Sell']\n",
-    "names.append('-')\n",
-    "securities.append('-')\n",
-    "tickers.append('-')\n",
-    "buysell.append('-')\n",
-    "\n",
-    "# Define the FilterParams class\n",
-    "class FilterParams(param.Parameterized):\n",
-    "    start_date = param.CalendarDate(default=date(2020, 1, 1))\n",
-    "    end_date = param.CalendarDate(default=date(2025, 12, 31))\n",
-    "    selected_name = param.Selector(objects=names, default='-')\n",
-    "    security = param.Selector(objects=securities, default='-')\n",
-    "    ticker = param.Selector(objects=tickers, default='-')\n",
-    "    action = param.ObjectSelector(default='-', objects=buysell)\n",
-    "\n",
-    "filter_params = FilterParams()\n",
-    "\n",
-    "# Create the widgets using Param\n",
-    "name_dropdown = pn.Param(filter_params.param.selected_name)\n",
-    "security_dropdown = pn.Param(filter_params.param.security)\n",
-    "ticker_dropdown = pn.Param(filter_params.param.ticker)\n",
-    "start_date_picker = pn.Param(filter_params.param.start_date)\n",
-    "end_date_picker = pn.Param(filter_params.param.end_date)\n",
-    "select_widget = pn.Param(filter_params.param.action)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "a1bd4ba6-4fce-4829-a41c-ec6fcee070d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filter_params' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 35\u001b[0m\n\u001b[1;32m     17\u001b[0m custom_js_formatter_date \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124mfunction(cell, formatterParams, onRendered) \u001b[39m\u001b[38;5;124m{\u001b[39m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;124m    var date = new Date(cell.getValue());\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;124m}\u001b[39m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     28\u001b[0m formatters \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdocid\u001b[39m\u001b[38;5;124m'\u001b[39m: StringFormatter(text_align\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtransaction_date\u001b[39m\u001b[38;5;124m'\u001b[39m: DateFormatter(\u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfiling_date\u001b[39m\u001b[38;5;124m'\u001b[39m: DateFormatter(\u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnotification_date\u001b[39m\u001b[38;5;124m'\u001b[39m: DateFormatter(\u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     33\u001b[0m }\n\u001b[0;32m---> 35\u001b[0m \u001b[38;5;129m@pn\u001b[39m\u001b[38;5;241m.\u001b[39mdepends(\u001b[43mfilter_params\u001b[49m\u001b[38;5;241m.\u001b[39mparam\u001b[38;5;241m.\u001b[39mselected_name, filter_params\u001b[38;5;241m.\u001b[39mparam\u001b[38;5;241m.\u001b[39msecurity, filter_params\u001b[38;5;241m.\u001b[39mparam\u001b[38;5;241m.\u001b[39mticker, filter_params\u001b[38;5;241m.\u001b[39mparam\u001b[38;5;241m.\u001b[39mstart_date, filter_params\u001b[38;5;241m.\u001b[39mparam\u001b[38;5;241m.\u001b[39mend_date, filter_params\u001b[38;5;241m.\u001b[39mparam\u001b[38;5;241m.\u001b[39maction)\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfilter_df\u001b[39m(selected_name, security, ticker, start_date, end_date, action):\n\u001b[1;32m     37\u001b[0m     filtered_df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m selected_name \u001b[38;5;129;01mand\u001b[39;00m selected_name \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'filter_params' is not defined"
+     ]
+    }
+   ],
    "source": [
     "PAGE_SIZE = 35\n",
     "WIDTHS = {\n",
@@ -149,6 +125,30 @@
     "        'card': 100,\n",
     "        'category': 200\n",
     "    }\n",
+    "\n",
+    "custom_js_formatter_docid = \"\"\"\n",
+    "function(cell, formatterParams, onRendered) {\n",
+    "    return cell.getValue();\n",
+    "}\n",
+    "\"\"\"\n",
+    "# Define custom JavaScript formatter for date columns\n",
+    "custom_js_formatter_date = \"\"\"\n",
+    "function(cell, formatterParams, onRendered) {\n",
+    "    var date = new Date(cell.getValue());\n",
+    "    var day = String(date.getDate()).padStart(2, '0');\n",
+    "    var month = String(date.getMonth() + 1).padStart(2, '0');\n",
+    "    var year = date.getFullYear();\n",
+    "    console.log(\"e\")\n",
+    "    return day + '/' + month + '/' + year;\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "formatters = {\n",
+    "    'docid': StringFormatter(text_align='left'),\n",
+    "    'transaction_date': DateFormatter(format='%d/%m/%Y'),\n",
+    "    'filing_date': DateFormatter(format='%d/%m/%Y'),\n",
+    "    'notification_date': DateFormatter(format='%d/%m/%Y')\n",
+    "}\n",
     "\n",
     "@pn.depends(filter_params.param.selected_name, filter_params.param.security, filter_params.param.ticker, filter_params.param.start_date, filter_params.param.end_date, filter_params.param.action)\n",
     "def filter_df(selected_name, security, ticker, start_date, end_date, action):\n",
@@ -172,53 +172,112 @@
     "    if start_date and end_date:\n",
     "        mask = (filtered_df['transaction_date'] >= pd.to_datetime(start_date)) & (filtered_df['transaction_date'] <= pd.to_datetime(end_date))\n",
     "        filtered_df = filtered_df[mask]\n",
-    "        \n",
-    "    \n",
-    "    return pn.widgets.Tabulator(filtered_df, pagination='local', page_size=PAGE_SIZE, sizing_mode='stretch_width', show_index=False)"
+    "\n",
+    "    #filtered_df = filtered_df.drop(columns=['id'])\n",
+    "\n",
+    "    # Reorder columns\n",
+    "    #ordered_columns = ['name', 'docid', 'asset', 'ticker', 'security', 'transaction_type', 'transaction_date', 'min_amount', 'max_amount', 'filing_date', 'notification_date']\n",
+    "    #filtered_df = filtered_df[ordered_columns]\n",
+    "\n",
+    "    return pn.widgets.Tabulator(\n",
+    "        filtered_df,\n",
+    "        pagination='local',\n",
+    "        page_size=PAGE_SIZE,\n",
+    "        sizing_mode='stretch_width',\n",
+    "        show_index=False,\n",
+    "        formatters=formatters,\n",
+    "    )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "e6ea4360-24a6-47fa-ab28-3c6fcb345298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop down options\n",
+    "names = list(df['name'].unique())\n",
+    "securities = list(df['security'].unique())\n",
+    "tickers = list(df['ticker'].unique())\n",
+    "buysell = ['Buy', 'Sell']\n",
+    "names.append('-')\n",
+    "securities.append('-')\n",
+    "tickers.append('-')\n",
+    "buysell.append('-')\n",
+    "\n",
+    "# Define the FilterParams class\n",
+    "class FilterParams(param.Parameterized):\n",
+    "    start_date = param.CalendarDate(default=date(2020, 1, 1))\n",
+    "    end_date = param.CalendarDate(default=date(2025, 12, 31))\n",
+    "    selected_name = param.Selector(objects=names, default='-')\n",
+    "    security = param.Selector(objects=securities, default='-')\n",
+    "    ticker = param.Selector(objects=tickers, default='-')\n",
+    "    action = param.ObjectSelector(objects=buysell, default='-')\n",
+    "\n",
+    "filter_params = FilterParams()\n",
+    "\n",
+    "# Create the widgets using Param\n",
+    "name_dropdown = pn.Param(filter_params.param.selected_name)\n",
+    "security_dropdown = pn.Param(filter_params.param.security)\n",
+    "ticker_dropdown = pn.Param(filter_params.param.ticker)\n",
+    "start_date_picker = pn.Param(filter_params.param.start_date)\n",
+    "end_date_picker = pn.Param(filter_params.param.end_date)\n",
+    "select_widget = pn.Param(filter_params.param.action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ba12b9f-c906-4588-8539-fd1626bcd572",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Launching server at http://localhost:41371\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<panel.io.server.Server at 0x7b9d98687050>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Opening in existing browser session.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "css = \"\"\"\n",
+    ".tabulator .tabulator-footer {\n",
+    "    background-color: #333 !important;\n",
+    "    color: #fff !important;\n",
+    "}\n",
+    ".tabulator .tabulator-paginator .tabulator-page,\n",
+    ".tabulator .tabulator-paginator .tabulator-pages,\n",
+    ".tabulator .tabulator-paginator .tabulator-prev,\n",
+    ".tabulator .tabulator-paginator .tabulator-next,\n",
+    ".tabulator .tabulator-paginator .tabulator-first,\n",
+    ".tabulator .tabulator-paginator .tabulator-last {\n",
+    "    background-color: #333 !important;\n",
+    "    color: #fff !important;\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "# Apply the custom CSS\n",
+    "pn.extension(raw_css=[css])\n",
+    "\n",
     "# Display the layout\n",
-    "layout = pn.Column(\n",
-    "    pn.Row(name_dropdown, security_dropdown, ticker_dropdown),\n",
-    "    pn.Row(start_date_picker, end_date_picker),\n",
-    "    select_widget,\n",
-    "    pn.panel(filter_df)\n",
+    "sidebar = pn.Column(\n",
+    "    pn.pane.Markdown(\"## Filters\"), \n",
+    "    pn.pane.PNG('static/image.png', width=300),\n",
+    "    name_dropdown, \n",
+    "    security_dropdown, \n",
+    "    ticker_dropdown, \n",
+    "    start_date_picker, \n",
+    "    end_date_picker, \n",
+    "    select_widget, \n",
+    "    css_classes=['center-content']\n",
+    ")\n",
+    "main_area = pn.Column(filter_df, styles={\"width\":\"100%\"})\n",
+    "\n",
+    "template = pn.template.BootstrapTemplate(\n",
+    "    title=\"Congress Trading Tracker\",\n",
+    "    sidebar=[sidebar],\n",
+    "    main=[main_area],\n",
+    "    header_background=\"black\", \n",
+    "    site=\"EliasManj\", theme=pn.template.DarkTheme,\n",
+    "    busy_indicator=None,\n",
     ")\n",
     "\n",
-    "layout.servable()\n",
-    "layout.show()"
+    "\n",
+    "template.servable()\n",
+    "template.show()"
    ]
   },
   {
